--- a/index.css
+++ b/index.css
@@ -14,14 +14,14 @@
 }
 body {
 
-  width: 100%;
+  /* width: 100%; */
   font-size: 13px;
   font-family: 'Karla', sans-serif;
   background-color: var(--Light-grayish-blue);
 }
 
 .container {
-  width: 100%;
+  /* width: 100%; */
   padding: 6em 4em;
   max-width: 1440px;
   display: flex;
@@ -270,7 +270,12 @@ line-height: 1.3;
     .Abrams h1{
 font-size: 1.15rem;
     }
+    .right-main h1{
+      font-size: 1rem;
+    }
+
     .right-main p{
-      font-size: 0.78375rem;
+      font-size: 0.7836rem;
+
     }
   }
