--- a/index.css
+++ b/index.css
@@ -103,6 +103,7 @@ font-size: 1.2rem;
 padding-top: 1.3em;
 line-height: 1.3;
 padding-bottom: 1.3em;
+font-weight: 600;
 color: var(--Very-dark-grayish-blue);
 }
 
@@ -110,6 +111,7 @@ color: var(--Very-dark-grayish-blue);
   color: var(--Very-dark-grayish-blue);
   font-size: 0.78rem;
   line-height: 1.6;
+  font-weight: 500;
 }
 .top-left-main {
    width: 100%;
@@ -146,12 +148,13 @@ font-size: 1.3rem;
 color: var(--White);
 padding-top: 1em;
 padding-bottom: 1em;
+font-weight: 600;
 }
 .Daniel p{
 font-size: 0.9rem;
 color: var(--Light-gray);
 line-height: 1.4;
-
+font-weight: 500;
 }
 
 .Jonathan{
@@ -165,12 +168,14 @@ line-height: 1.4;
   color: var(--White);
   padding-bottom: 1.5em;
   font-size: 1.2rem;
+  font-weight: 600;
 }
 .Jonathan p{
   font-size: 0.8rem;
   color: var(--Light-gray);
   padding-bottom: 2em;
   line-height: 1.5;
+  font-weight: 500;
 }
 
 .harmon{
@@ -185,11 +190,13 @@ line-height: 1.4;
   padding-top: 1.2em;
   padding-bottom: 1.2em;
   line-height: 1.3;
+  font-weight: 600;
 }
 .harmon p{
   font-size: 0.8rem;
   color: var(--Very-dark-grayish-blue);
   line-height: 1.5;
+  font-weight: 500;
 }
 
 .Abrams{
@@ -204,11 +211,13 @@ padding-top: 1em;
 padding-bottom: 1em;
 color: var(--White);
 line-height: 1.3;
+font-weight: 600;
 }
 .Abrams p{
   font-size: 0.9rem;
   color: var(--Light-gray) ;
   line-height: 1.5;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 1024px) {
@@ -246,7 +255,8 @@ line-height: 1.3;
       border: 1px solid wheat;
     }
     .Daniel{
-    height: 90vh;
+    height: 57vh;
+   
     }
     .Daniel h1{
     font-size: 1.21rem;
@@ -256,7 +266,7 @@ line-height: 1.3;
     line-height: 1.4;
     }
     .Jonathan{
-      height: 50vh;
+      height: 32vh;
      }
      .Jonathan p{
        font-size: 0.7rem;
@@ -271,11 +281,11 @@ line-height: 1.3;
 font-size: 1.15rem;
     }
     .right-main h1{
-      font-size: 1rem;
+      font-size: 1.2rem;
     }
 
     .right-main p{
-      font-size: 0.7836rem;
+      font-size: 0.783rem;
 
     }
   }
